Add 2 and 3 lessons

--- a/rnn_intro_2022/1_neural_nets.ipynb
+++ b/rnn_intro_2022/1_neural_nets.ipynb
@@ -407,6 +407,26 @@
     }
    },
    "source": [
+    "### Регуляризация\n",
+    "\n",
+    "$$ L(W, b) = - \\sum\\limits_j \\ln \\frac{e^{(x_jW + b)_{y_j}}}{\\sum\\limits_i e^{(x_jW + b)_{i}}} + \\lambda R(W, b) \\\\\n",
+    "   R(W, b) = \\|W\\|_2^2 + \\|b\\|_2^2 \\\\\n",
+    "   \\|b\\|_2^2 = b_0^2 + \\dots + b_k^2\n",
+    "$$\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"images/regularization.png\" width=400/>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### Однослойная нейросеть для классификации\n",
     "\n",
     "Для построения нейронной сети на Python воспользуемся библиотекой keras. Это в свою очередь высокоуровневая надстройка над tensorflow. Большим ее преимуществом является интерфейс, совместимый с sklearn."
