Improvements after lectures

--- a/rnn_intro_2022/1_neural_nets.ipynb
+++ b/rnn_intro_2022/1_neural_nets.ipynb
@@ -404,10 +404,10 @@
     "\n",
     "$$L(w) = \\sum\\limits_{i=1}^\\ell {\\mathcal{L}(y_i, x_i, w)} = -\\ln P(y_i|w, x_i) \\to \\min\\limits_w$$\n",
     "\n",
-    " * это cross-entropy loss для случая $y_i \\in \\{0, 1\\}$\n",
+    " * это cross-entropy loss для случая бинарных истинных вероятностей классов (то есть $ \\in \\{0, 1\\}$)\n",
     " * в нашем случае\n",
     "\n",
-    "$$ L(W, b) = - \\sum\\limits_j \\ln \\frac{e^{(x_jW + b)_{y_j}}}{\\sum\\limits_i e^{(x_jW + b)_{i}}}$$\n",
+    "$$ L(W, b) = - \\sum\\limits_j \\ln \\frac{e^{(x_jW + b)_{y_j}}}{\\sum\\limits_{i=0}^9 e^{(x_jW + b)_{i}}}$$\n",
     "\n",
     " * минимум функции находим стохастическим градиентным спуском\n",
     "\n",
