--- a/rnn_intro_2022/3_rnn.ipynb
+++ b/rnn_intro_2022/3_rnn.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "<br />\n",
     "<br />\n",
-    "12 января 2022"
+    "17-18 января 2022"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "<div align=\"center\">\n",
     "    <img src=\"images/one-to-many.jpg\" width=200 />\n",
     "    $\\text{Image Captioning} \\\\\n",
-    "     \\text{image} \\to \\text{sequence of words})$\n",
+    "     (\\text{image} \\to \\text{sequence of words})$\n",
     "</div>"
    ]
   },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -309,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data has 61491 characters, 83 unique.\n"
+      "data has 61609 characters, 83 unique.\n"
      ]
     }
    ],
@@ -327,6 +327,30 @@
     "print('data has %d characters, %d unique.' % (data_size, vocab_size))\n",
     "char_to_ix = { ch:i for i,ch in enumerate(chars) }\n",
     "ix_to_char = { i:ch for i,ch in enumerate(chars) }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C . # X f   i A N ” 1 e 2 R U © h “ z * a y ‘ Z u 8 b n m – B c Y s r … k : x l 5 , — 3 Q L g v D G ; 6 p I H O ’ - F J q E / t \\n S 7 4 o d T K 9 j & W 0 V ! P ? w M'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(chars)"
    ]
   },
   {
@@ -470,6 +494,24 @@
     "\n",
     " * прямой проход для расчета потерь\n",
     " * обратное распространение ошибки (backpropagation)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Обозначим компоненты вектора вероятностей символов (классов) на выходе RNN через\n",
+    "$$ p_k = \\frac{e^{f_k}}{\\sum\\limits_j e^{f_j}}$$\n",
+    "\n",
+    "Тогда значение функции потерь на очередном объекте $x_i$\n",
+    "$$ L_i = -\\ln (p_{y_i})$$\n",
+    "\n",
+    "Тогда можно прямым вычислением производной получить\n",
+    "$$ \\frac{\\partial L_i}{\\partial f_k} = p_k - 1(y_i = k)$$"
    ]
   },
   {
@@ -631,13 +673,6 @@
     " * Как тренировать нейросети? http://karpathy.github.io/2019/04/25/recipe/\n",
     " * Аналогичное занятие курса Школы анализа данных: https://github.com/yandexdataschool/Practical_DL/tree/fall21/week06_rnn"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
