--- a/rnn_intro_2022/4_lstm.ipynb
+++ b/rnn_intro_2022/4_lstm.ipynb
@@ -18,7 +18,20 @@
     "\n",
     "<br />\n",
     "<br />\n",
-    "13 января 2022"
+    "19 января 2022"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Посмотрим и обсудим визуализацию работы RNN:\n",
+    "\n",
+    "https://karpathy.github.io/2015/05/21/rnn-effectiveness/"
    ]
   },
   {
@@ -31,7 +44,7 @@
    "source": [
     "### Глубокие рекуррентные сети\n",
     "\n",
-    "<table style=\"width:60%\">\n",
+    "<table style=\"width:80%\">\n",
     "  <tr>\n",
     "    <td>\n",
     "    <div align=\"center\">\n",
@@ -60,10 +73,7 @@
     "    $$\n",
     "    </div>\n",
     "    </td>\n",
-    "    <td><div align=\"center\">\n",
-    "        <img src=\"images/rnn_depth.jpg\" alt=\"rnn_architectures\"/>\n",
-    "        </div>\n",
-    "    </td>\n",
+    "    <td><img src=\"images/rnn_depth.jpg\" alt=\"rnn_architectures\"/></td>  \n",
     "  </tr>\n",
     "</table>"
    ]
@@ -313,6 +323,73 @@
     }
    },
    "source": [
+    "### RNN для синтеза последовательностей (seq2seq)\n",
+    "\n",
+    "$X = (x_1, \\dots, x_n)$ — входная последовательность\n",
+    "\n",
+    "$Y = (y_1, \\dots, y_m)$ — выходная последовательность\n",
+    "\n",
+    "$\\color{red}{c \\equiv h_n}$ кодирует всю информацию про $X$ для синтеза $Y$\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"images/seq2seq.png\" alt=\"seq2seq\" width=400/>\n",
+    "</div>\n",
+    "\n",
+    "$h_i = f_{in}(x_i, h_{i-1})$\n",
+    "\n",
+    "$\\color{red}{h_t^\\prime = f_{out}(h_{t-1}^\\prime,y_{t-1},c)}$\n",
+    "\n",
+    "$y_t = f_{y}(h_t^\\prime, y_{t-1})$\n",
+    "\n",
+    " * $h_n$ лучше помнит конец последовательности, чем начало\n",
+    " * чем больше $n$, тем труднее упаковать всю информацию в $c$\n",
+    " * придётся контролировать затухание\\взрывы градиента\n",
+    " * RNN трудно распараллеливается"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### RNN с вниманием (attention mechanism)\n",
+    "\n",
+    "$a(h, h^\\prime)$ — функция сходства состояний входа $h$ и выхода $h^\\prime$ \n",
+    "(скалярное произведение или $\\exp(h^T h^\\prime)$ и другие) \n",
+    "\n",
+    "$\\alpha_{ti}$ — важность входа $i$ для выхода $t$ (attention score), $\\sum_i \\alpha_{ti} = 1$\n",
+    "\n",
+    "$c_t$ — вектор входного контекста для выхода $t$ (context vector)\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"images/seq2seq_attention.png\" alt=\"seq2seq_attention\" width=400/>\n",
+    "</div>\n",
+    "\n",
+    "$h_i = f_{in}(x_i, h_{i-1})$\n",
+    "\n",
+    "$\\color{red}{\\alpha_{ti} = \\text{norm}_i a(h_i, h^\\prime_{t-1})},\\ \\text{norm}_i(p) = \\frac{p_i}{\\sum_j p_j} \\\\\n",
+    "\\color{red}{c_t = \\sum_i \\alpha_{ti} h_i}$\n",
+    "\n",
+    "$h_t^\\prime = f_{out} (h^\\prime_{t-1}, y_{t-1}, \\color{red}{c_t}) \\\\ y_t = f_{y}(h_t^\\prime, y_{t-1}, \\color{red}{c_t})$\n",
+    "\n",
+    " * можно вводить обучаемые параметры в $a$ и $c$\n",
+    " * можно отказаться от рекуррентности как по $h_i$, так и по $h_t^\\prime$\n",
+    " \n",
+    "------\n",
+    "_Bahdanau et al._ Neural machine translation by jointly learning to align and translate. 2015."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### Резюме\n",
     "\n",
     " * Рекуррентные нейронные сети — простой, мощный и гибкий подход решения различных задач машинного обучения\n",
@@ -325,8 +402,17 @@
     "### Что ещё можно посмотреть?\n",
     " * Лекция 10 курса «CS231n» Andrej Karpathy в Стенфорде: https://www.youtube.com/watch?v=iX5V1WpxxkY\n",
     " * Как тренировать нейросети? http://karpathy.github.io/2019/04/25/recipe/\n",
-    " * Аналогичное занятие курса Школы анализа данных: https://github.com/yandexdataschool/Practical_DL/tree/fall21/week06_rnn"
+    " * Аналогичное занятие курса Школы анализа данных: https://github.com/yandexdataschool/Practical_DL/tree/fall21/week06_rnn\n",
+    " * Лекция К.В. Воронцова «Модели внимания и трансформеры» https://www.youtube.com/watch?v=KhMweP00S44\n",
+    " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
